# cerebro

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  example.prompt.md  main.py  pyproject.toml
generated-docs/81b3dc4e-6f12-4c80-9941-55c1e8ee6ec9/sergiomasellis/Tapestry/docs/: 000-misc-doc.md  100-architecture-overview.md  101-system-router.md  200-business-domain-overview.md  311-rest-api-endpoints.md  421-main-entity-schema.md  500-key-dependencies.md  600-config-and-environments.md  701-authentication-model.md  800-observability-overview.md  850-runbook-operations.md  900-ci-cd-pipeline.md  930-risks-and-decisions.md  980-rag-indexing-guidelines.md
generated-docs/87a47552-312f-4e6e-a79d-44d8e4cd7c84/sergiomasellis/Tapestry/docs/: 000-misc-doc.md  100-architecture-overview.md  101-system-router.md  200-business-domain-overview.md  311-rest-api-endpoints.md  421-main-entity-schema.md  500-key-dependencies.md  600-config-and-environments.md  701-authentication-model.md  800-observability-overview.md  850-runbook-operations.md  900-ci-cd-pipeline.md  930-risks-and-decisions.md  980-rag-indexing-guidelines.md
generated-docs/a51f5202-79b2-4906-a192-64a11434477c/sergiomasellis/gambit/docs/: 000-index.md  000-misc-doc.md  100-architecture-overview.md  101-system-router.md  200-business-domain-overview.md  311-rest-api-endpoints.md  421-main-entity-schema.md  500-key-dependencies.md  701-authentication-model.md  (+6 more)
src/: api.py  config.py  graph.py  logger.py  models.py  nodes.py  s3_utils.py  state.py  utils.py  worker.py
tests/: perf_test_ast_grep.py
(+57 files in other folders)
