[project]
name = "cerebro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.2.7",
    "dotfiles>=0.6.5",
    "fastapi>=0.121.3",
    "gitpython>=3.1.45",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.7",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "mkdocs-material>=9.7.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.5",
]
